add product links

--- a/src/content/blog/van/van-electrical-p1.mdx
+++ b/src/content/blog/van/van-electrical-p1.mdx
@@ -92,4 +92,5 @@ turned off and on when needed, and if we forgot to turn it off would still be si
 
 Instead we decided to use small buck converters for each device. These can be purchased in various ratings, so we can buy them specific to each devices needs. The units 
 are relatively small and can be placed along side each device, allowing us to take advantage of the 24v system for the longer wire runs (smaller gauge wire, and 
-less current). Since I recently purchased a 3D printer, [I'm able to print custom mounts and wire boxes for each space as well](https://shop.brightwrenchdesign.com/products/buck-converter-mounting-kit-w-junction-box-24v-12v-3d-printed-1).
+less current). Since I recently purchased a 3D printer, not only am I [able to print custom mounts and wire boxes for each space as well](https://shop.brightwrenchdesign.com/products/buck-converter-mounting-kit-w-junction-box-24v-12v-3d-printed-1),
+but I can print my own [custom clips](https://shop.brightwrenchdesign.com/products/mounting-clip-1-2-od-loom-pack-of-5) and [mounting brackets](https://shop.brightwrenchdesign.com/products/150a-dc-circuit-breaker-mounting-kit).
