adjust categories, rm bubble links

--- a/src/content/blog/home/onair-meeting-light.mdx
+++ b/src/content/blog/home/onair-meeting-light.mdx
@@ -2,7 +2,7 @@
 title: 'Making An "On Air" Meeting Light Alert'
 author: "Ryan Russell"
 date: "2023-09-01"
-category: "home"
+category: "home projects"
 description: 'Making an "On Air" light to indicate when we are on meetings'
 ogImage: "meeting_light/studio.jpg"
 ---
