--- a/src/content/blog/van/about-the-van.mdx
+++ b/src/content/blog/van/about-the-van.mdx
@@ -2,7 +2,7 @@
 title: "About The Van: Our 2023 Ford Transit"
 author: "Ryan Russell"
 date: "2023-09-01"
-category: "van"
+category: "van build"
 description: "Everything to know about our new 2023 Ford Transit"
 ogImage: "about_the_van/van_cartoon.jpg"
 ---
