--- a/src/content/blog/van/kicking-off-2024.mdx
+++ b/src/content/blog/van/kicking-off-2024.mdx
@@ -2,7 +2,7 @@
 title: "Kicking off 2024: Van Progress Update"
 author: "Ryan Russell"
 date: "2024-02-01"
-category: "van"
+category: "van build"
 description: "A quick progress update on the van as we kick off 2024"
 ogImage: "kicking_off_2024/van_work.png"
 ---
