--- a/src/content/blog/van/van-electrical-p1.mdx
+++ b/src/content/blog/van/van-electrical-p1.mdx
@@ -2,7 +2,7 @@
 title: "Electrical Series Part 1: Design and Planning"
 author: "Ryan Russell"
 date: "2024-03-05"
-category: "van"
+category: "van build"
 description: "A glimpse into the design and planning of the electrical system"
 ogImage: "van_electrical/part_1/electrical_diagram.png"
 ---
