--- a/src/content/blog/van/roof-layout-p1.mdx
+++ b/src/content/blog/van/roof-layout-p1.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Roof Series Part 1: Accessories, Planning, and Design"
+title: "Roof Series Part 1: Design and Planning"
 author: "Ryan Russell"
 date: "2024-03-03"
 category: "van build"
-description: "Planning the layout for a MaxxAir fan, Velit AC, Tern Overland hatch, solar, and antennas"
+description: "Planning the layout for a fan, A/C, hatch, solar, and antennas"
 ogImage: "roof_layout/part_1/layout_design_gpt.png"
 ---
 
