Add posts, refactor site (#15)

--- a/src/content/blog/home/onair-meeting-light.mdx
+++ b/src/content/blog/home/onair-meeting-light.mdx
@@ -2,7 +2,7 @@
 title: 'Making An "On Air" Meeting Light Alert'
 author: "Ryan Russell"
 date: "2023-09-01"
-category: "home"
+category: "home projects"
 description: 'Making an "On Air" light to indicate when we are on meetings'
 ogImage: "meeting_light/studio.jpg"
 ---
@@ -25,6 +25,8 @@ when one of our cameras or microphones becomes active.
 
 There are two components to this project: The software side to activate the light at the right time, and the building
 of the light itself.
+
+<NewsletterCurious />
 
 ## Hardware
 
