--- a/src/content/blog/home/onair-meeting-light.mdx
+++ b/src/content/blog/home/onair-meeting-light.mdx
@@ -4,7 +4,7 @@ author: "Ryan Russell"
 date: "2023-09-01"
 category: "home projects"
 description: 'Making an "On Air" light to indicate when we are on meetings'
-ogImage: "meeting_light/studio.jpg"
+ogImage: "meeting_light/studio_2.jpg"
 ---
 
 Working from home has brought many challenges, especially with two of us sharing the same office space.
