--- a/src/content/blog/tech/vpn-wireguard-aws-unifi.mdx
+++ b/src/content/blog/tech/vpn-wireguard-aws-unifi.mdx
@@ -4,7 +4,7 @@ author: "Ryan Russell"
 date: "2023-09-01"
 category: "tech"
 description: "Setting up a VPN in AWS and connecting a UniFi Dream Machine Pro"
-ogImage: "udm_vpn/network_routers.png"
+ogImage: "udm_vpn/network_routers_2.png"
 ---
 
 Earlier this year I setup Home Assistant as a replacement to SmartThings, but the one missing
