--- a/src/content/blog/tech/taking-down-my-own-network.mdx
+++ b/src/content/blog/tech/taking-down-my-own-network.mdx
@@ -7,10 +7,10 @@ description: "The value of automated backups and things I could further improve.
 ogImage: "home_network/network_down.png"
 ---
 
-It was a beautiful, sunny Thursday afternoon. I just returned from lunch and was getting ready to head to 
+It was a beautiful, sunny, Thursday afternoon. I had just returned from lunch and was getting ready to head to 
 San Diego for the weekend for a half marathon. That afternoon I was expecting UPS to deliver a new Ubiquiti 95W
 24 port POE switch to alleviate some POE constraints, and I was hoping to get it installed and configured before leaving
-for the airport. I'd finally be able to get rid of a few POE injectors scattered around 
+for the airport the next day. I'd finally be able to get rid of a few POE injectors scattered around 
 the house and eliminate the occasional dropped camera feed with "POE capacity exceeded" error notifications.
 
 I sat down and started running some config backups. I would also need to complete firmware updates on a few switches and update 
@@ -19,16 +19,16 @@ I reconfigured the switches.
 
 The plan was to replace the 45W 16-port POE lite switch that was over capacity in the upstairs bedroom 
 closet with the new 95W 24-port POE rack mounted switch. I'd be replacing an 8-port POE lite switch in the network rack in the office 
-that had the UDM. 
+that housed the UDM. 
 
 One of the devices in the network rack with the UDM and switch is an old Dell laptop I repurposed into a "server" running Ubuntu Server 20.04. It's old, a little finicky, but it 
 was completely free to get running and makes for a great little dev machine on the network. As an added bonus the built in battery means it has virtually zero downtime when we lose power.
 
 This 15+ year old laptop started as a simple dev server I could play around with, but over the years has turned into something much more critical that the entire network 
-relies on (the story of every successful POC). It now runs Home Assistant and ZWaveJS for all of our home automation and controls, and PiHole for DNS/ad-blocking. It has zero redundancy, but does have automated backups for the critical services so if something does happen, I can at least cobble it back 
+relies on (the unfortunate story of many successful POCs). It now runs Home Assistant and ZWaveJS for all of our home automation and controls, and PiHole for DNS/ad-blocking. It has zero redundancy, but does have automated backups for the critical services so if something does happen, I can at least cobble it back 
 together with minimal downtime. 
 
-This old laptop server would also need to be updated, along with Home Assistant, ZWaveJS, and the PiHole.
+This old laptop server would also need to be updated, along with Home Assistant, ZWaveJS, and PiHole.
 
 ---
 
@@ -38,6 +38,7 @@ sanity check of the docker services and make sure everything was still running s
 ```bash
 port 22: Connection refused
 ```
+
 Weird. 
 
 I hop over to the server rack and try to get in directly from the laptop command line. Everything looked fine other than the backlog of system updates and a `***Restart Required***` message. 
@@ -45,8 +46,8 @@ Let's try a reboot first to try and get an SSH connection working so I don't hav
 Shut down went fine, but immediately hung on boot with nothing but a single flashing cursor in the top left corner. No keyboard inputs, no logs, no response.
 
 I shut it down again and tried to boot it back up. It showed the Dell boot screen and I went into the boot menu. It still showed the hard drive and everything looked normal, so I tried to boot it again, and it 
-immediately jumped to the flashing cursor. It wouldn't accept any keyboard inputs, even from a secondary USB keyboard. Still no logs or any other indication Ubuntu was doing _anything_. 
-I tried switching to a different tty, with no luck. I shut it back down and tried again, and that's when I heard it: a faint, dreaded _click...click...click_ coming from behind the hard drive cover. 
+immediately jumped to the flashing cursor. It wouldn't accept any keyboard inputs, even from a secondary USB keyboard this time. Still no logs or any other indication Ubuntu was doing _anything_. 
+I tried switching to a different tty, with no luck. I shut it back down and tried again, and that's when I heard it: a faint, dreaded, _click...click...click_ coming from behind the hard drive cover. 
 
 The poor ol' girl was on her last legs, and it was looking like the 15 year old 256GB disk drive that I should have replaced years ago, had finally given in. 
 
@@ -69,7 +70,7 @@ At least that was working!
 
 ---
 
-At this point I had to decide what to do next. The Ubiquiti switch had arrived by this time, but I didn't want to further risk the network being down while I was gone, so I 
+At this point I had to decide what to do next. The Ubiquiti switch had arrived by this point, but I didn't want to further risk the network being down while I was gone, so I 
 wanted to try and get the server back up before reconfiguring the hardware and complicating the situation even more. I pulled the hard drive from the Dell to try and get it to boot in another laptop. 
 It was a long shot, but maybe there was just an issue with the motherboard or the connection to the hard drive. Unfortunately it was the same dreaded _click...click...click._ 
 
@@ -79,8 +80,10 @@ running everything from. It would be a late night, but it _should_ work, and onc
 
 I downloaded the Ubuntu image, flashed my USB drive with the `.iso` file, booted from it, and began the Ubuntu install process on the new hard drive.
 
-Once it was installed, I setup docker and brought up Home Assistant, ZWaveJS, and the PiHole, all set to the latest stable images. All three services started up normally from blank configs. Now it was time 
-to restore the backups. Since Home Assistant and ZWaveJS are docker containers, they do not have a restore option from their respective GUIs. I had to manually copy the 
+Once it was installed, I set up docker and brought up Home Assistant, ZWaveJS, and PiHole, all set to the latest stable images. All three services started up normally from blank configs. Now it was time 
+to try and restore the backups. 
+
+Since Home Assistant and ZWaveJS are docker containers, they do not have a restore option from their respective GUIs. I had to manually copy the 
 configuration files backed up in AWS into the fresh new docker containers and restart them. All three came back up: The PiHole GUI showed historical data 
 and my block lists, HomeAssistant loaded all of the old dashboards, and ZWaveJS listed all of the correct ZWave/Zigbee devices. The only errors were with the Zwave/Zigbee devices, but after
 around 20 minutes of fresh "handshakes" between the controller and all of the devices, everything seemed to be working.
@@ -92,6 +95,7 @@ From my Mac I tested to see if UniFi and Wireguard were able to resolve DNS via 
 
 ```bash
 nslookup google.com
+
 Server:		10.5.5.192
 Address:	10.5.5.192#53
 
