--- a/src/content/blog/van/van-electrical-p1.mdx
+++ b/src/content/blog/van/van-electrical-p1.mdx
@@ -4,7 +4,7 @@ author: "Ryan Russell"
 date: "2024-03-05"
 category: "van build"
 description: "A glimpse into the design and planning of the electrical system"
-ogImage: "van_electrical/part_1/electrical_diagram.png"
+ogImage: "van_electrical/electrical_diagram.png"
 ---
 
 One of our areas of focus over the last few months has been the planning and design of the electrical system. We
@@ -94,3 +94,5 @@ Instead we decided to use small buck converters for each device. These can be pu
 are relatively small and can be placed along side each device, allowing us to take advantage of the 24v system for the longer wire runs (smaller gauge wire, and 
 less current). Since I recently purchased a 3D printer, not only am I able to print custom mounts and wire boxes for each space as well,
 but I can print my own custom clips and mounting brackets.
+
+[Check out Part 2 of this series: Distribution Panel Installation](/blog/van/van-electrical-p2)
