add footer text to p2

--- a/src/content/blog/van/van-electrical-p2.mdx
+++ b/src/content/blog/van/van-electrical-p2.mdx
@@ -125,3 +125,5 @@ the main electrical panel.
 -picture of dc fuse panels-
 
 We left one remaining spot on the distributor open that is reserved for the Multiplus, so once we get to the point where we need it, we can install and wire it up with relative ease.
+
+In the next blog post we'll go into detail on the electrical control systems for the lights and other DC accessories!
